@@ -1,5 +1,9 @@
 - NEW: Command line param /bugid to prefill the bug ID
        in the commit dialog. See issue #202 for details. (Stefan)
+- NEW: User defined regexes to parse the files for keywords used
+       for autoexpanding in the commit dialog can now be stored
+       in %APPDATA%\TortoiseSVN\autolist.txt so they won't get
+       overwritten on upgrades. (Stefan)
 
 Version 1.3.0
 - NEW: The settings dialog now has a button to open the system sound
